avoid word wrapping

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -393,6 +393,10 @@ footer .nav-link i {
   margin-right: 1rem;
 }
 
+.place-open-dropdown-closed {
+  margin-bottom: 0;
+}
+
 .place-open-section {
   width: 100%;
   display: flex;
